--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -12,32 +12,42 @@
                 <li>
                     <i class="fas fa-user"></i>
                     <a href="#" class="buttonMenu">profile</a>
-                </li>>
+                </li>
                 <li>
-                    <i class="fas fa-user"></i>
-                    <a href="#" class="buttonMenu">profile</a>
-                </li>>
+                    <i class="fa fa-gears"></i>
+                    <a href="#" class="buttonMenu">manage quizzes</a>
+                </li>
                 <li>
-                    <i class="fas fa-user"></i>
-                    <a href="#" class="buttonMenu">profile</a>
-                </li>>
+                    <i class="fas fa-users"></i>
+                    <a href="#" class="buttonMenu">join group</a>
+                </li>
                 <li>
-                    <i class="fas fa-user"></i>
-                    <a href="#" class="buttonMenu">profile</a>
-                </li>>
+                    <i class="fas fa-bell"></i>
+                    <a href="#" class="buttonMenu">notifications</a>
+                </li>
             </ul>   
         </nav>
         <main>
             <header>
-                <div class="search bar">
-                    <form class="login">
+                <div class="search-bar">                  
+                    <form>
+                        <i class="fab fa-searchengin"></i>
                         <input placeholder="search quizess">
                     </form>
-
                 </div>
-                <div class="add quiz">
+                <div class="space"></div>
+                <div class="headerButton">
+                <a href="#" class="add-quiz">
                     <i class="fas fa-plus"></i>
                     create quiz
+                </a>
+                </div>
+            
+                <div class="headerButton">
+                <a href="#" class="log-out">
+                    <i class="fas fa-arrow-left"></i>
+                    logout
+                </a>
                 </div>
 
             </header>
