--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -3,7 +3,8 @@ body{
     overflow-x: hidden;
     background: url(../img/loginPhoto.svg);
     background-size: cover;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .container {
     width: 100vw;
