--- a/public/css/styleMainPage.css
+++ b/public/css/styleMainPage.css
@@ -1,75 +1,195 @@
 body{
     margin: 0;
     overflow-x: hidden;
-    background: url(../img/loginPhoto.svg);
+    background: url(../img/mainPagePhoto.svg);
     background-size: cover;
     background-repeat: repeat;
 }
-.container {
-    width: 100vw;
+
+.base-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
     height: 100vh;
+}
+
+nav{
+    width: 20vw;
+    height: 100%;
+    background: transparent linear-gradient(180deg, #111111 0%, #535252 100%) 0% 0% no-repeat padding-box;
+
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
 }
 
-.login-container{
-    width: 40%;
-    height: 1000vh;
-    align-self: flex-end; 
-    background: #2b242469 0% 0% no-repeat padding-box;
-    box-shadow: inset 0px 3px 6px #2d1b1b49;
-    border: 1px solid #707070;
-    backdrop-filter: blur(40px);
-    -webkit-backdrop-filter: blur(40px);
-    
-}
-
-form{
-    display: flex;
+main{
+    width: 80vw;
     flex-direction: column;
-    align-items: center;
-    z-index: 10;
+    height: 100vh;
 }
 
-#logo{
-    max-width: 80%;
-    padding: 3em;
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5em 1em;
+    border-bottom: 1px solid gray;
+
+    background: #2B2424 0% 0% no-repeat padding-box;
+    box-shadow: inset 0px 3px 6px #2D1B1B29;
+    opacity: 0.66;
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
+    z-index: -1;
 
 }
 
-button{
-    background: #FEF5838F 0% 0% no-repeat padding-box;
-    border: 3px solid #707070;
-    border-radius: 37px;
-    opacity: 1;
 
+.search-bar{
     width: 30%;
-    color: black;
-    line-height: 3em;
-    margin: 1em;
+    height: 50%;
 
 }
 
-input{
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid black;
+.headerButton{
+    align-content: flex-end;
+    width: 10%;
+    height: 50%;
+}
+
+.search-bar > form{
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #707070;
+    border-radius: 2em;
+    opacity: 1;
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
+    text-align: left;
+    margin: 0;
+    width: 100%;
+    box-sizing: border-box;
+    height: 100%;
     padding: 1em;
-    margin: 1em;
-    width: 50%;
+
+}
+
+.search-bar > form > input{
+    width: 80%;
+    border: none;
+    text-align: center;
+    border-bottom: 1px solid gray;
+}
+
+.search-bar > form > i{
+    padding-right: 0.8em;
+    color: black;
+}
+
+.add-quiz{
+    width: 120%;
+    height: 100%;
+    padding: 1em;
+    text-align: center;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #707070;
+    border-radius: 2em;
+    opacity: 1;
+    backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
+    color: black;
+    margin: 0;
+    line-height: 1em;
+}
+
+.add-quiz > i{
+    padding: 0;
+    padding-right: 0.8em;
+    padding-left: 0;
+}
+
+
+.log-out{
+    width: 100%;
+    padding: 1em;
+    color: white;
+
+    border: 3px solid #707070;
+    border-radius: 2em;
+    opacity: 1;
+    margin-left: 0;
+    text-align: center;
+    letter-spacing: 0.7px;
+    box-sizing: border-box;
+    line-height: 1em;
+
+}
+
+.space{
+    width: 20%;
+}
+
+nav > img{
+    width: 80%;
+    margin: 2em auto;
+    filter: brightness(0.5) invert(0.9);
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    line-height: 2em;
+}
+
+
+
+li i {
+    font-size: 1.5em;
+}
+
+.buttonMenu{
+    border: 3px solid #707070;
+    border-radius: 1em;
+    opacity: 1;
+    margin-left: 1em;
+    margin-bottom: 2em;
+    text-align: center;
+    letter-spacing: 0.7px;
+    color: white;
+    padding: 0.2em;
+    width: 70%;
+}
+
+
+ul {
+    list-style: none;
+    color: white;
+    font-family:Sanvito Pro Display;
+
+    letter-spacing: 0.7px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    width: 90%;
+}
+
+li{
+    text-align: left;
+    margin-bottom: 1em;
+
+}
+
+.fa, .fas{
+    font-weight: 900;
+    width: 1em;
 }
 
 *{
     font-family:Sanvito Pro Display;
     font-size: large;
+    font-size: 2vmin;
 }
 
 @media only screen and (max-device-width:420px){
-    .login-container{
-        width: 100%;
-    }
 
     *{
         font-size: 36px;
