--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/styleLogin.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styleLogin.css">
     <title>LOGIN PAGE</title>
 </head>
 <body>
     <div class="container">
         <div class="login-container">           
             <form>
-                <img src="../img/logo.svg" id="logo">
+                <img src="public/img/logo.svg" id="logo">
                 <input name="email" type="text" placeholder="email">
                 <input name="password" type="password" placeholder="password">
                 <button>SIGN IN</button>
