--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/styleMainPage.css">
+    <link rel="stylesheet" type="text/css" href="public/css/styleMainPage.css">
     <script src="https://kit.fontawesome.com/a80193e2f6.js" crossorigin="anonymous"></script>
     <title>MAIN PAGE</title>
 </head>
 <body>
     <div class="base-container">
         <nav>
-            <img src="../img/logo.svg">
+            <img src="public/img/logo.svg">
             <ul>
                 <li>
                     <i class="fas fa-user"></i>
