--- a/public/views/createAccount.html
+++ b/public/views/createAccount.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="public/css/styleCreateAccount.css">
-    <title>LOGIN PAGE</title>
+    <title>CREATE ACCOUNT</title>
 </head>
 <body>
     <div class="container">
         <div class="login-container">           
             <form>
-                <img src="public/img/logo.svg" id="logo">
+                <p>Welcome to Edival! Let's get started.</p>
+                <img src="public/img/logo.svg" id="logo2">
                 <input name="email" type="text" placeholder="email">
                 <input name="password" type="password" placeholder="password">
-                <button>SIGN IN</button>
+                <input name="confirm password" type="password" placeholder="confirm password">
                 <button>SIGN UP</button>
+                <p>Already have account?</p>
+                <button>SIGN IN</button>
             </form>
         </div>
     </div>
