--- a/public/views/mainpage.html
+++ b/public/views/mainpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="public/css/styleMainPage.css">
+    <link rel="stylesheet" type="text/css" href="public/css/quiz.css">
     <script src="https://kit.fontawesome.com/a80193e2f6.js" crossorigin="anonymous"></script>
     <title>MAIN PAGE</title>
 </head>
@@ -52,9 +53,39 @@
 
             </header>
             <section class = quizess>
-                <div>quiz 1</div>
-                <div>quiz 2</div>
-                <div>quiz 3</div>
+                <div id="quiz 1">         
+                     <div>
+                        <h2>Title</h2>
+                        <img src="public/img/upload/Temple-of-Saturn-Arch-Septimius-Severus-Forum.jpg">
+                        <div class="social">
+                            <i class="fas fa-users">56</i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>               
+                    </div>
+                        <button>START</button>
+                </div>
+                <div id="quiz 2">         
+                    <div>
+                       <h2>Title</h2>
+                       <img src="public/img/upload/Temple-of-Saturn-Arch-Septimius-Severus-Forum.jpg">
+                       <div class="social">
+                           <i class="fas fa-users">56</i>
+                       </div>
+                       <p>Lorem ipsum dolor sit amet, conveniam, quis nostrud exercitation</p>
+                   </div>
+                   <button>START</button>
+               </div>
+               <div id="quiz 3">         
+                <div>
+                   <h2>Title</h2>
+                   <img src="public/img/upload/Temple-of-Saturn-Arch-Septimius-Severus-Forum.jpg">
+                   <div class="social">
+                       <i class="fas fa-users">56</i>
+                   </div>
+                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+               </div>
+               <button>START</button>
+            </div>
             </section>
         </main>
 
