--- a/public/css/styleMainPage.css
+++ b/public/css/styleMainPage.css
@@ -53,7 +53,7 @@ header{
 
 .headerButton{
     align-content: flex-end;
-    width: 10%;
+    width: 15%;
     height: 50%;
 }
 
@@ -78,6 +78,10 @@ header{
     border: none;
     text-align: center;
     border-bottom: 1px solid gray;
+}
+
+.search-bar > form{
+    padding: 0.8em;
 }
 
 .search-bar > form > i{
@@ -125,7 +129,7 @@ header{
 }
 
 .space{
-    width: 20%;
+    width: 10%;
 }
 
 nav > img{
@@ -191,7 +195,17 @@ li{
 
 @media only screen and (max-device-width:420px){
 
+    nav{ 
+        display: none;
+    }
+    header{
+        width: 120%;
+        color: wheat;
+    }
+    .space{
+        display: none;
+    }
     *{
-        font-size: 36px;
+        font-size: x-large;
     }
 }
