--- a/public/css/styleCreateAccount.css
+++ b/public/css/styleCreateAccount.css
@@ -78,6 +78,13 @@ input{
     width: 50%;
 }
 
+.goto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+}
+
 *{
     font-family:Sanvito Pro Display;
     font-size: large;
