--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -9,20 +9,15 @@ section{
 
 
 
-section > div > div > img{
-    max-height: 50%;
-    width: 80%;
+section > div > img{
+    height: 40%;
+    width: 100%;
     object-fit: cover;
-    border-radius: 1em 1em;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
+    border-radius: 1em 1em 0 0;
+
 }
 
-.quizess > div > div{
+.quizzes > div > div{
     max-height: 95%;
     margin: 1em;
     display: flex;
@@ -31,10 +26,13 @@ section > div > div > img{
     margin: 0;
 }
 
-.quizess > div{
+.quizzes> div{
     border: 1px solid gray;
     border-radius: 2em 2em;
     background: #FFFBE9E6 0% 0% no-repeat padding-box;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
 }
 
 h2{
