--- a/public/css/styleCreateAccount.css
+++ b/public/css/styleCreateAccount.css
@@ -94,6 +94,12 @@ input{
     font-size: large;
 }
 
+.no-valid{
+    border: 3px solid red;
+    border-radius: 1em;
+    outline: none;
+}
+
 @media only screen and (max-device-width:420px){
     .login-container{
         width: 100%;
