--- a/public/css/styleAnswer.css
+++ b/public/css/styleAnswer.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
-    background: url(../img/answer.jpg);
+    width: 100%;
+    height: 100%;
+    background: url(../img/quiz.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -16,7 +18,7 @@ body{
 }
 
 .qa-container{
-    width: 70%;
+    width: 100%;
     height: 1000vh;
     align-self: center;
     background: #2b242469 0% 0% no-repeat padding-box;
@@ -42,12 +44,12 @@ p{
 }
 
 button, p{
-    background: #FEF5838F 0% 0% no-repeat padding-box;
+    background: wheat 0% 0% no-repeat padding-box;
     border: 3px solid #707070;
-    border-radius: 37px;
+    border-radius: 2em;
     opacity: 1;
 
-    width: 60%;
+    width: 35%;
     color: black;
     line-height: 3em;
     margin: 1em;
@@ -57,42 +59,71 @@ button, p{
 
 }
 
-.left, .right{
+.circle{
     display: flex;
     flex-direction: column;
-    background: transparent linear-gradient(180deg, #111111 0%, #535252 100%) 0% 0% no-repeat padding-box;
-    background-attachment: fixed;
     height: 100%;
+    width: 100%;
     position: absolute;
+    z-index: -1;
 
 }
 
-.left{
-    align-self: flex-start;
-    width: 16%;
-    border-right: 0.1em solid #707070;
-}
-
-.right{
-    align-self: flex-end;
-    width: 16%;
-    border-left: 0.1em solid #707070;
-}
-
-h3 {
-    z-index: 2;
-    color: wheat;
+.h3-left {
     font-family: 'American Typewriter', serif;
     font-style: italic;
-    font-size: x-large;
+    font-size: xx-large;
     justify-self: center;
     align-self: center;
     position: absolute;
-    bottom: 20%;
+    bottom: 3%;
+    left: 2%;
+    color: wheat;
 }
+
+.circle-left{
+    position: absolute;
+    transform: translate(-50%,+50%);
+    bottom: 0;
+    left: 0;
+    max-width: 70%;
+    max-height: 70%;
+    width: auto;
+    height: auto;
+    filter: invert();
+}
+
+.h3-right {
+    font-family: 'American Typewriter', serif;
+    font-style: italic;
+    font-size: xx-large;
+    justify-self: center;
+    align-self: center;
+    position: absolute;
+    bottom: 3%;
+    right: 2%;
+    color: wheat;
+}
+
+.circle-right{
+    position: absolute;
+    transform: translate(+50%,+50%);
+    bottom: 0;
+    right: 0;
+    max-width: 70%;
+    max-height: 70%;
+    width: auto;
+    height: auto;
+    filter: invert();
+}
+
 
 button:hover{
     border: 3px solid black;
+}
+
+.time{
+    color: red;
 }
 
 
@@ -103,16 +134,17 @@ button:hover{
 
 
 
-@media only screen and (max-device-width:420px){
+@media only screen and (max-device-width:480px){
     .login-container{
         width: 100%;
     }
 
-    p{
-        font-size: 60px;
+    button,p{
+        width: 75%;
     }
 
-    *{
-        font-size: 36px;
+    .h3-left, .h3-right{
+        font-size: large;
     }
+
 }
