--- a/public/css/styleMainPage.css
+++ b/public/css/styleMainPage.css
@@ -59,7 +59,7 @@ header{
     height: 50%;
 }
 
-.search-bar > form{
+.search-bar{
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 1px solid #707070;
     border-radius: 2em;
@@ -68,25 +68,25 @@ header{
     -webkit-backdrop-filter: blur(30px);
     text-align: left;
     margin: 0;
-    width: 100%;
+    width: 30%;
     box-sizing: border-box;
     height: 100%;
     padding: 1em;
 
 }
 
-.search-bar > form > input{
+.search-bar > input{
     width: 80%;
     border: none;
     text-align: center;
     border-bottom: 1px solid gray;
 }
 
-.search-bar > form{
+.search-bar{
     padding: 0.8em;
 }
 
-.search-bar > form > i{
+.search-bar > i{
     padding-right: 0.8em;
     color: black;
 }
@@ -247,12 +247,12 @@ li > a:hover{
         width: 50%;
     }
 
-    .search-bar > form > input{
+    .search-bar > input{
         font-size: 40px;
         border: none;
     }
 
-    .search-bar > form > i{
+    .search-bar > i{
         font-size: 40px;
     }
 
@@ -290,7 +290,6 @@ li > a:hover{
 
     .headerButton, .search-bar{
         border: none;
-        background: none;
     }
 
     .add-quiz{
