--- a/public/css/styleProfile.css
+++ b/public/css/styleProfile.css
@@ -101,6 +101,12 @@ button:hover{
     width: 50%;
 }
 
+.no-valid{
+    border: 3px solid red !important;
+    border-radius: 10px;
+}
+
+
 @media only screen and (max-device-width:420px) {
     section{
         width: 80%;
