--- a/public/css/styleManageQuizzes.css
+++ b/public/css/styleManageQuizzes.css
@@ -12,7 +12,6 @@ section{
     background: #FFFBE9f6 0% 0% no-repeat padding-box;
     border: 3px solid gray;
     border-radius: 2em 2em;
-    line-height: 2em;
     height: 100px;
     display: flex;
     justify-content: flex-start;
@@ -32,8 +31,14 @@ section{
     margin-left: 5%;
     padding-right: 5%;
     border-right: 1px solid gray;
-    width: 20%;
+    width: 200%;
 
+}
+
+.textContainer2{
+    margin-left: 5%;
+    padding-right: 5%;
+    border-right: 1px solid gray;
 }
 
 button:hover{
@@ -90,7 +95,7 @@ p{
     }
 
     .parentContainer{
-        height: 250px;
+        height: 350px;
     }
 
 
